--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,13 @@
 		<%= render "layouts/nav" %>
 	</header>
 
-	<div class="container">
+	<!-- <div class="container" id="main"> -->
 
 		<%= flash_messages %>
 		
 		
 		<%= yield %>
-	</div>
+	<!-- </div> -->
 
 </body>
 </html>
