--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -45,7 +45,11 @@
 										<% recipe.comments.each do |comment| %>
 											<div class="comment-well">
 												<p><%= comment.content %></p>
-												<p>By: <%= link_to comment.commenter.email_name, user_path(comment.commenter) %> posted on: <%= post_date(comment) %></p>
+												<h6>posted on: <%= post_date(comment) %></h6>
+												<div class="recipe-profile-card">
+													<%= link_to (image_tag comment.commenter.avatar.url(:thumb), class: 'img-circle'), user_path(comment.commenter) %>
+													By: <%= link_to comment.commenter.email_name, user_path(comment.commenter) %>
+												</div>
 											</div>
 										<% end %>
 									</div>
