--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,9 +6,9 @@
 			</div>
 			<div class="row">
 				<div class=" col-xs-6 col-sm-6 col-md-6 col-lg-6">
-					<%= link_to (image_tag @user.avatar.url(:original), class: 'img-circle index-image'), user_path(@user) %>
+					<%= link_to (image_tag @user.avatar.url(:original), class: 'img-circle card-image'), user_path(@user) %>
 				</div>
-				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 card-text">
 					<div><%= link_to "Add a recipe", new_recipe_path, class: "btn btn-link card-link" if @user == current_user %></div>
 					<div><%= link_to "Comments", user_comments_path(@user), class: "btn btn-link card-link" %></div>
 
