added image highlight/overlay

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -24,6 +24,10 @@
 	box-shadow: 0 0 2px 1px #CCC;
 }
 
+.image-hover {
+	background: rgba(20, 20, 20, 0.6);
+}
+
 input#query {
 	display: inline;
 }
