--- a/app/views/ingredients/_fields.html.erb
+++ b/app/views/ingredients/_fields.html.erb
@@ -1,8 +1,2 @@
-<div class="panel-body">	
-	<div class="form-group row">
-		<label class="col-md-2 control-label" for="recipe_ingredients_attributes_name">Name</label>
-		<input class="form-control comment col-md-2" type="text" name="recipe[ingredients_attributes][][name]" id="recipe_ingredients_attributes_name">
-		<label class="col-md-2 control-label	" for="recipe_ingredients_attributes_measurement">Measurement</label>
-		<input class="form-control measurement col-md-2" type="text" name="recipe[ingredients_attributes][][measurement]" id="recipe_ingredients_attributes_measurement">
-	</div>
-</div>
+<input class="form-control comment col-md-6" type="text" name="recipe[ingredients_attributes][][name]" id="recipe_ingredients_attributes_name" placeholder="Name">
+<input class="form-control comment col-md-6 col-md-offset-1" type="text" name="recipe[ingredients_attributes][][measurement]" id="recipe_ingredients_attributes_measurement" placeholder="Measurement"><br></br>
