cleaned up comment_controller code and alert box for recipe show page

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,12 +1,6 @@
-html = '<%= j (render "comment", comment: @comment) %>'
+html = '<%= j (render @comment) %>'
 
-<% if @comment %>
-	$('div#comment_form').before(html);
-	$('#new_comment')[0].reset();  
-  $('#main-content').before("<div class='alert alert-success'>Successfully created comment</div>");
-<% else %>  
-  $('#main-content').before("<div class='alert alert-danger'>there was an error.</div>");
-<% end %>
-
-
+$('div#comments_display').append(html);
+$('#new_comment')[0].reset();  
+$("#dialog").dialog('open');
 
