--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,7 @@
 <div class="panel panel-default comment">
 	<div class="panel-heading">
-		<strong><%= link_to comment.commenter.email_name, user_path(comment.commenter) %></strong> 
+			<%= link_to (image_tag comment.commenter.avatar.url(:thumb), class: 'img-circle'), user_path(comment.commenter) %>
+			<%= link_to comment.commenter.email_name, user_path(comment.commenter) %>
 			posted on: <%= post_date(comment) %><br>
 	</div>
 	<div class="panel-body">
@@ -9,3 +10,4 @@
  			<%= link_to "delete", comment_path(comment), remote: true, method: "DELETE", class: "btn btn-default btn-xs" if can? :destroy, comment %></p>
 	</div>
 </div>
+
