--- a/app/views/layouts/recipe_index.html.erb
+++ b/app/views/layouts/recipe_index.html.erb
@@ -20,7 +20,7 @@
 					<h1>Tummy Topics</h1>
 				</div>
 				<h2>Search Recipes</h2>
-				<%= form_tag '/search', id: 'search_form', method: 'POST' do %>
+				<%= form_tag '/search', id: 'search_form', method: 'POST', data: { current_query: "", search_limit: 0 } do %>
 					
 					<%= text_field_tag :query, nil, class: "form-control comment", placeholder: "search recipe name, ingredient or rating (1-5)" %>
 					
