--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -22,14 +22,14 @@
 		<%= f.fields_for :ingredients_attributes do |ingredients| %>
 			<%= render 'ingredients/fields', ingredients: ingredients %>
 		<% end %>
-		<div id="new-form"></div>
+		<div class="ingredient-form" id="new-form"></div>
 		<% if recipe.errors[:ingredients_attributes].any? %>
 				<span class="help-block"><%= recipe.errors.full_messages_for(:ingredients_attributes).to_sentence %></span>
 		<% end %>
 	</div>
 	
 	<div class='form-group'>
-		<button class='btn btn-primary' id='button' data-url="/recipes/ingredients/new">add another ingredient</button>
+		<button class='btn btn-primary' id='get-form' data-url="/recipes/ingredients/new">add another ingredient</button>
 	</div>
 	
 	<div class="form-group <%= 'has-error' if recipe.errors[:directions].any? %>">
